<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mobile tracking car </string>
    <string name="hello_world">Hello world!</string>
    <string name="txt_ip_address">IP Adresse</string>
    <string name="txt_local_port">Local Port</string>
    <string name="txt_clear">Clear List</string>
    <string name="title_activity_start_screen">StartScreen</string>
    <string name="txt_loading_data">Loading Data</string>
    <string name="txt_waiting_clients">Waiting for clients on</string>
    <string name="txt_logo">project logo</string>
    <string name="txt_tcp_start">Start Application</string>
    <string name="txt_port_label">"Listening on port: "</string>
    <string name="txt_ip_label">"IP Address: "</string>
    <string name="txt_img_con_car">This is the connection image of the car</string>
    <string name="txt_img_con_video">This is the connection image of the video</string>
    <string name="txt_img_con_gps">This is the connection image of the GPS</string>
    <string name="txt_img_con_start">Start button of the Application</string>
    
    <string name="txt_img_con_left">left button</string>
    <string name="txt_img_con_right">right button</string>
    <string name="txt_img_con_up">up button</string>
    <string name="txt_img_con_down">down button</string>
    
    
    <string name="menu_settings">Settings</string>   
    <string name="str_btn_moveForward">Forward</string>
    <string name="str_btn_moveLeft">Left</string>  
    <string name="str_btn_moveRight">Right</string>
    <string name="title_activity_main">ADD1 Project</string>
    <string name="title_activity_buttons">ADD1 Project - Button control<string name="str_btn_moveBackward">Backward</string></string>
    <string name="title_activity_help"> Help</string>
    <string name="title_activity_about">About our project</string>
    <string name="btn_button">Button control</string>
    <string name="btn_help">Help</string>
    <string name="btn_about">About</string>
    <string name="text_TankControl">Tank Control</string>
    <string name="text_CamControl">Cam Control</string>
    <string name="text_about">Project designed by a team of students from the University of Aarhus for ITSMAP subject.</string>
    <string name="text_about2">Team is composed by 6 students: </string>
    <string name="andi">Andreas Bergen </string>
    <string name="michi">Michael Pfister </string>
    <string name="coucou">Constantin Nivet </string>
    <string name="francois">François Grzybowski</string>
    <string name="jm">Jorge Mañanas </string>
    <string name="noel">Noel Peña </string>
    <string name="help_textInfo1">1.You can choose how do you want to control the car, BUTTONS or JOYSTICK.</string>
	<string name="help_textInfo2">2. You will be able too see what the camera in the car shows.</string>
	<string name="help_textInfo3">If you need further information please do not hesitate to contact us at add1prj@gmail.com</string>
	<string name="default_MAC">00:15:FF:F2:19:4C</string>
    <string name="default_commadLeft">L</string>
    <string name="default_commandRight">R</string>
    <string name="default_commandHorn">H</string>
    <string name="default_pwmBtnMotorLeft">255</string>
    <string name="default_pwmBtnMotorRight">255</string>
    
</resources>
