<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center|top"
        android:layout_weight="0.3" >

        <ImageView
            android:id="@+id/img_car"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/txt_img_con_car"
            android:src="@drawable/icons_startup_car_offline" />
        
        <ImageView
            android:id="@+id/img_video"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/txt_img_con_video"
            android:src="@drawable/icons_startup_video_offline" />
        
        <ImageView
            android:id="@+id/img_gps"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/txt_img_con_gps"
            android:src="@drawable/icons_startup_gps_offline" />
        
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_app_start"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/txt_img_con_start"
        android:cropToPadding="false"
        android:maxHeight="150dp"
        android:maxWidth="150dp"
        android:visibility="gone"
        android:padding="-20dp"
        android:scaleType="fitCenter"
        android:layout_gravity="center"
        android:src="@drawable/icons_startup_play" />

</LinearLayout>