<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|bottom"
    android:orientation="vertical" >

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center|bottom" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_waiting_clients"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center|top"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:gravity="center"
            >

            <TextView
                android:id="@+id/txt_ip_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_ip_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

			<TextView
	            android:id="@+id/txt_ip"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text=""
	            android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center" >

            <TextView
                android:id="@+id/txt_port_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_port_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

			<TextView
	            android:id="@+id/txt_port"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text=""
	            android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>        
    </LinearLayout>

</LinearLayout>
