<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="206dp"
        android:layout_weight="17.71"
        android:clickable="false" >

    </ListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="22dp"
        android:layout_weight="100"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp" >

        <Button
	        android:id="@+id/button3"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:onClick="startTCP"
	        android:layout_weight="50"
	        android:text="@string/txt_clear" />

        <Button
	        android:id="@+id/button4"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:onClick="clearList"
	        android:layout_weight="50"
	        android:text="@string/txt_clear" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000000" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="22dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/label_IP"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:text="@string/txt_ip_address" />

        <TextView
            android:id="@+id/deviceIP"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="22dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp" >

        <TextView
            android:id="@+id/label_localPort"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:text="@string/txt_local_port" />

        <TextView
            android:id="@+id/localPort"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</LinearLayout>